@@ -4,6 +4,10 @@ Changelog
 0.8 - Unreleased
 ----------------
 
+* Added ``-a`` option to ``checkout`` command to limit matching to the
+  packages declared by the ``auto-checkout`` option. If no further argument
+  is given, then all the packages from ``auto-checkout`` are processed.
+  [fschulze]
 
 0.7 - 2009-03-24
 ----------------
